R401 Half B: consume the bundled tree-sitter runtime; collapse the system-dep machinery
With graphitron-tree-sitter-natives 0.26.9-1 published (grammar + runtime,
eight entries), the LSP loads the bundled runtime and the system dependency is
gone. Validated locally against the published jar: full graphitron-lsp suite
green (456 tests, 3 @EnabledOnOs skips), loading the bundled runtime through
the BundledLibraryLookup SPI (consulted before any system fallback).

- graphitron-lsp/pom.xml: natives dependency 0.26.0-1 -> 0.26.9-1.
- BundledLibraryLookup: extract both grammar + runtime, return
  grammar.or(bundledRuntime); the SPI serves the runtime to jtreesitter's
  TreeSitter bindings and the grammar to Language.load. Deleted the
  system-probe (probeSystemTreeSitter / candidateRuntimePaths).
- GraphqlLanguage: collapsed the dual mechanism (deleted classifyInstalledRuntime,
  RuntimeStatus, runtimeProbePaths, tooOldRuntimeMessage, missingRuntimeMessage,
  ABI_VERSION_SYMBOL) to a single bundled-load-failure diagnostic naming the
  extracted temp path (covers noexec tmpdir / corrupt extract / missing CRT).
  Repointed DOCS_URL to the reference page (the prior value also had the
  /architecture/ path bug).
- Tests: GraphqlLanguageErrorTranslationTest reworked to the single diagnostic
  (+ missing-path case); NativeLibraryBundleTest / TreeSitterSmokeTest /
  IncrementalParseTest javadocs updated to the bundled runtime.
- Docs collapse (first-client check): lsp-requirements.adoc, getting-started
  #native-runtime-dependency, and the reference index now read 'nothing to
  install'; removed the per-platform install matrix and the NixOS shell.nix
  snippet. Rendered the docs site to confirm the pages build and xrefs resolve.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_016MHbtpgf1yyURiUogFc2Ep